# leaves

./: .dockerignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  api.Dockerfile
.github/workflows/: clippy.yml  format.yml  test.yml
api/: .env.example  Cargo.toml  Dockerfile
api/migrations/: U3__Create_api_tokens_table.sql  V1__Create_users_table.sql  V2__Create_files_table.sql  V3__Create_api_tokens_table.sql
api/sql/: insert_file.sql  select_api_tokens_by_user.sql  select_user_by_id.sql
api/src/: app.rs  config.rs  error.rs  main.rs  model.rs  prelude.rs  state.rs  utils.rs
api/src/common/: auth.rs
api/src/common/middleware/: mod.rs  token_valid.rs
api/src/migrations/: V1__create_users_table.rs  V2__Create_files_table.rs  V3__Create_api_tokens_table.rs  mod.rs
api/src/routes/: files.rs  index.rs  mod.rs  users.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs  util.rs
cli/src/command/: file.rs  login.rs  logout.rs  mod.rs  signup.rs  upload.rs
http-client/: Cargo.toml
http-client/src/: client.rs  config.rs  error.rs  lib.rs  prelude.rs
models/: Cargo.toml
models/src/: v1.rs
