[package]
authors = ["Vivian Hellyer <hi@vivian.is>"]
edition = "2018"
homepage = "https://github.com/vivianhellyer/leaves"
include = ["./src/**/*.rs", "Cargo.toml", "Cargo.lock", "LICENSE.md", "README.md"]
name = "leaves-api"
publish = false
readme = "../README.md"
repository = "https://github.com/vivianhellyer/leaves.git"
version = "0.1.0"

[dependencies]
async-std = { default-features = false, version = "^1.5.0" }
envy = { default-features = false, version = "^0.4.1" }
femme = { default-features = false, version = "^1.3.0" }
futures = { default-features = false, version = "^0.3.4" }
log = { default-features = false, version = "^0.4.8" }
rand = { default-features = false, version = "^0.7.3" }
serde = { default-features = false, features = ["derive"], version = "^1.0.0" }
serde_json = { default-features = false, version = "^1.0.0" }
snafu = { default-features = false, features = ["std"], version = "^0.6.0" }
sqlx = { default-features = false, features = ["macros", "postgres", "runtime-async-std"], version = "^0.2.5" }
# This commit adds per-route middleware, which just makes everything so much
# easier.
tide = { default-features = false, features = ["hyper-server"], git = "https://github.com/http-rs/tide", rev = "589abaf" }
