[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
edition = "2018"
homepage = "https://github.com/leaves-host/leaves"
include = ["./src/**/*.rs", "Cargo.toml", "Cargo.lock", "LICENSE.md", "README.md"]
name = "leaves-api"
publish = false
readme = "../README.md"
repository = "https://github.com/leaves-host/leaves.git"
version = "0.1.0"

[dependencies]
async-std = { default-features = false, version = "^1.5.0" }
barrel = { default-features = false, features = ["sqlite3"], version = "^0.6.5" }
envy = { default-features = false, version = "^0.4.1" }
femme = { default-features = false, version = "^1.3.0" }
log = { default-features = false, version = "^0.4.8" }
models = { package = "leaves-models", path = "../models" }
r2d2 = { default-features = false, version = "^0.8.8" }
r2d2_sqlite = { default-features = false, version = "^0.14.0" }
rand = { default-features = true, version = "^0.7.3" }
refinery = { default-features = false, features = ["rusqlite"], version = "^0.2.1" }
rusqlite = { default-features = false, version = "^0.21.0" }
serde = { default-features = false, features = ["derive"], version = "^1.0.0" }
serde_json = { default-features = false, version = "^1.0.0" }
serde_rusqlite = { default-features = false, version = "^0.23.0" }
snafu = { default-features = false, features = ["std"], version = "^0.6.0" }
tide = { default-features = false, features = ["h1-server"], version = "^0.8.0" }
