[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
edition = "2018"
homepage = "https://github.com/leaves-host/leaves"
include = ["./src/**/*.rs", "Cargo.toml", "Cargo.lock", "LICENSE.md", "README.md"]
name = "leaves-api"
publish = false
readme = "../README.md"
repository = "https://github.com/leaves-host/leaves.git"
version = "0.1.0"

[dependencies]
async-std = { default-features = false, version = "^1.5.0" }
async-trait = { default-features = false, version = "^0.1.42" }
barrel = { default-features = false, features = ["sqlite3"], version = "^0.6.5" }
envy = { default-features = false, version = "^0.4.1" }
femme = { default-features = false, version = "^2.1" }
log = { default-features = false, version = "^0.4.8" }
models = { package = "leaves-models", path = "../models" }
r2d2 = { default-features = false, version = "^0.8.8" }
r2d2_sqlite = { default-features = false, version = "^0.17.0" }
rand = { default-features = true, version = "^0.8.0" }
refinery = { default-features = false, features = ["rusqlite"], version = "^0.4.0" }
rusqlite = { default-features = false, version = "^0.24.2" }
serde = { default-features = false, features = ["derive"], version = "^1.0.0" }
serde_json = { default-features = false, version = "^1.0.0" }
serde_rusqlite = { default-features = false, version = "^0.26.0" }
tide = { default-features = true, features = ["h1-server"], version = "^0.15.0" }
