[package]
authors = ["Vivian Hellyer <vivian@hellyer.dev>"]
edition = "2018"
name = "leaves"
version = "0.1.0"

[dependencies]
copypasta = { default-features = false, version = "^0.6.2" }
directories = { default-features = false, version = "^2.0.2" }
http-client = { package = "leaves-http-client", path = "../http-client" }
pretty-bytes = { default-features = false, version = "^0.2.2" }
serde = { default-features = false, features = ["derive"], version = "^1.0.0" }
serde_json = { default-features = false, version = "^1.0.0" }
snafu = { default-features = false, features = ["std"], version = "^0.6.2" }
vivian-essentials = "0.1"
